Fixed promo heading spacing

--- a/src/admin/app.scss
+++ b/src/admin/app.scss
@@ -155,10 +155,11 @@ $revpressGreen: rgb(0, 158, 18);
     }
 
     h2 {
-        margin: 16px 0;
+        margin: 12px 0;
         color: $revpressGreen;
         font-size: 1.5em;
         font-weight: bold;
+        line-height: 1.2;
     }
 
     p {
